Added my resume :boom:

--- a/resume.html
+++ b/resume.html
@@ -9,57 +9,66 @@
   <link rel="stylesheet" href="resume.css" type="text/css" />
 </head>
 <body>
-<div id='container'><div id='contact'><p>
-<a href="https://raw.github.com/mwhite/resume/master/resume.md">Markdown</a> -&gt; <a href="https://raw.github.com/mwhite/resume/master/resume.pdf">PDF</a>, <a href="http://mwhite.github.com/resume">HTML</a>, and more
-</p><p>
-<a href="http://github.com/mwhite/resume">http://github.com/mwhite/resume</a>
-</p></div>
+<div id='container'>
+<div id="contact">
+<p>
+</p>
+</div>
 <div>
-<h1 id="markdown-resumé">Markdown Resumé</h1>
+<h1 id="kirill-shaplyko">Kirill Shaplyko</h1>
+<h2 id="contact">Contact</h2>
+<ul>
+<li>Email: <script type="text/javascript">
+<!--
+h='&#x67;&#x6d;&#x61;&#x69;&#108;&#46;&#x63;&#x6f;&#x6d;';a='&#64;';n='&#x6b;&#46;&#x73;&#104;&#x61;&#112;&#108;&#x79;&#x6b;&#x6f;';e=n+a+h;
+document.write('<a h'+'ref'+'="ma'+'ilto'+':'+e+'" clas'+'s="em' + 'ail">'+e+'<\/'+'a'+'>');
+// -->
+</script><noscript>&#x6b;&#46;&#x73;&#104;&#x61;&#112;&#108;&#x79;&#x6b;&#x6f;&#32;&#x61;&#116;&#32;&#x67;&#x6d;&#x61;&#x69;&#108;&#32;&#100;&#x6f;&#116;&#32;&#x63;&#x6f;&#x6d;</noscript></li>
+<li>Skype: <a href="skype:k.shaplyko">k.shaplyko</a></li>
+<li>Phone: +66 61 576 13 50, +375 336 37 60 90</li>
+<li>Github: <a href="https://github.com/baltazore">Baltazore</a></li>
+<li>LinkedIn: <a href="https://www.linkedin.com/pub/kirill-shaplyko/61/473/9a1/en">Kirill Shaplyko</a></li>
+<li>Twitter: <a href="http://twitter.com/_baltazore">_baltazore</a></li>
+</ul>
 <h2 id="interests">Interests</h2>
 <ul>
-<li>Creating beautiful resumés from simple Markdown documents</li>
+<li>Software Development using the latest edge of the technologies like Ruby, NodeJS, Elixir and expanding my skills in DevOps like Chef, Ansible, Vagrant, Docker and FrontEnd.</li>
 </ul>
 <h2 id="work-experience">Work Experience</h2>
 <ul>
-<li><p><strong>Word Processor</strong> (Redmond, WA)</p>
-<p>Junior Resumé Maker, 2006 - 2007</p>
+<li><p><strong>GameHouse</strong></p>
+<p>Software Developer, 2013 - current</p>
 <ul>
-<li>Intermingled presentation and content</li>
-<li>Styling was a pain, so either didn't do it or found a half-decent template and didn't mess with it</li>
+<li>Developing the application using Ruby on Rails, NodeJS, MongoDB, Redis, AngularJS.</li>
+<li>Working on the deployments tasks. Learning Ansible and Docker for building container based hosts.</li>
+<li>Developing the advertisement platform for the mobile devices.</li>
+<li>Brainstorm and prototype the new approach for some parts of the application.</li>
+<li>Writing specs and cucumber scenarios for integration tests for our API endpoints.</li>
 </ul></li>
-<li><p><strong>LaTeX + pdflatex</strong></p>
-<p>Senior Resumé Maker, 2008 - 2010</p>
+<li><p><strong>RubyRoid Labs</strong></p>
+<p>Software Developer, 2013 - 2014</p>
 <ul>
-<li>Edited verbose LaTeX documents in a text editor</li>
-<li>Mixed content and presentation to achieve pixel-perfection</li>
-<li>Installed and configured the unusual TeX setups required by the best-looking LaTeX resumés</li>
+<li>I was working on document generation system. The project includes document generation, task management for Police Department, Hospitals, ect. Used Ruby on Rails, PostgreSQL, AngularJS</li>
 </ul></li>
-<li><p><strong>LinkedIn, StackOverflow Careers, vizualize.me, etc</strong></p>
-<p>Web Resumé Intern, August 2010</p>
+<li><p><strong>Itransition</strong></p>
+<p>Ruby on Rails Developer, 2012-2013</p>
 <ul>
-<li>Entered data, adapting to different data models and formatting limitations</li>
-<li>Attempted to customize PDF exports and remove default resumé elements, to no avail</li>
-</ul></li>
-<li><p><strong>Markdown with Pandoc</strong></p>
-<p>Resumé Architect, February 2011 - present</p>
-<ul>
-<li>Write in one format (Markdown), convert to many formats (PDF, HTML, ODT, DOCX, and more)</li>
-<li>Style HTML output with CSS and PDF output with a custom LaTeX header</li>
-<li>Use a simple pre-processor to define per-format operations on the Markdown input or its parts, such as moving contact information to the top right of the page in both HTML and PDF output.</li>
-<li>Use a text-based resumé when needed in a pinch</li>
-<li>Use version control, including free hosting on Github</li>
+<li>As Ruby developer I was working on mobile advertising platform for back-end, front-end and mobile clients API for iOS and Android. The project is intended to increase sales for businesses by providing discounts. Using Ruby on Rails, MySQL, Redis, Sidekiq, Faye, Pushover.</li>
+<li>As Ruby developer I was working on online auction system. Full auction workflow support (from creating to send notification about winnign beds). Dealing with admin panel, server back-end for real-time bid system. Using Ruby on Rails, Redis, MySQL, Faye, MongoDB, Rescue</li>
+<li>As Ruby developer I was working on Social Media Aggregation System. It aggregates data by keywords from Facebook, Twitter, Sysomos(15+ servises), Google News, Google Blogs, Youtube, Google Images and Vocus(Print media and Blogspot). Dealing with main aggregation gateways, alert system(sms, email), report system(pdf, plain text, html). Used Ruby on Rails, MySQL, Facebook, Twitter, Klout APIs.</li>
 </ul></li>
 </ul>
 <h2 id="education">Education</h2>
 <ul>
-<li><p><strong>Github University</strong> (World Wide Web)</p>
-<p>B.S. in Submodules, May 2012</p></li>
+<li><p><strong>Belarussian State of Informatics and Radioelectronics</strong></p>
+<p>B.S. in Computer Science, May 2014</p></li>
 </ul>
 <h2 id="skills">Skills</h2>
 <ul>
-<li><p>Very experienced with Python, Markdown, LaTeX</p></li>
-<li><p>Familiar with GNU Make, bash</p></li>
+<li><p>Very experienced with Ruby, JavaScript.</p></li>
+<li><p>Ruby on Rails 2-4, NodeJS, Elixir, AngularJS, RSpec, Cucumber, MongoDB, PostgreSQL</p></li>
+<li><p>Using RSpec, Cucumber and other unit tests libraries</p></li>
+<li><p>Using Vim / Tmux for the development</p></li>
 </ul>
 </div>
 </body>
