--- a/resume.html
+++ b/resume.html
@@ -32,7 +32,7 @@ document.write('<a h'+'ref'+'="ma'+'ilto'+':'+e+'" clas'+'s="em' + 'ail">'+e+'<\
 </ul>
 <h2 id="interests">Interests</h2>
 <ul>
-<li>Software Development using the latest edge of the technologies like Ruby, NodeJS, Elixir and expanding my skills in DevOps like Chef, Ansible, Vagrant, Docker and FrontEnd.</li>
+<li>Software Development using the latest edge of the technologies like Ruby, NodeJS, Elixir and expanding my skills in DevOps like Chef, Ansible, Vagrant, Docker and in front-end like AngularJS, EmberJS, ReactJS.</li>
 </ul>
 <h2 id="work-experience">Work Experience</h2>
 <ul>
@@ -48,14 +48,17 @@ document.write('<a h'+'ref'+'="ma'+'ilto'+':'+e+'" clas'+'s="em' + 'ail">'+e+'<\
 <li><p><strong>RubyRoid Labs</strong></p>
 <p>Software Developer, 2013 - 2014</p>
 <ul>
-<li>I was working on document generation system. The project includes document generation, task management for Police Department, Hospitals, ect. Used Ruby on Rails, PostgreSQL, AngularJS</li>
+<li>Document generation system. The project includes document generation, task management for Police Department, Hospitals, ect. Technologies: Ruby on Rails, PostgreSQL, AngularJS, Elasticsearch</li>
 </ul></li>
 <li><p><strong>Itransition</strong></p>
 <p>Ruby on Rails Developer, 2012-2013</p>
 <ul>
-<li>As Ruby developer I was working on mobile advertising platform for back-end, front-end and mobile clients API for iOS and Android. The project is intended to increase sales for businesses by providing discounts. Using Ruby on Rails, MySQL, Redis, Sidekiq, Faye, Pushover.</li>
-<li>As Ruby developer I was working on online auction system. Full auction workflow support (from creating to send notification about winnign beds). Dealing with admin panel, server back-end for real-time bid system. Using Ruby on Rails, Redis, MySQL, Faye, MongoDB, Rescue</li>
-<li>As Ruby developer I was working on Social Media Aggregation System. It aggregates data by keywords from Facebook, Twitter, Sysomos(15+ servises), Google News, Google Blogs, Youtube, Google Images and Vocus(Print media and Blogspot). Dealing with main aggregation gateways, alert system(sms, email), report system(pdf, plain text, html). Used Ruby on Rails, MySQL, Facebook, Twitter, Klout APIs.</li>
+<li>Mobile advertising platform for back-end, front-end and mobile clients API for iOS and Android. The project is intended to increase sales for businesses by providing discounts.</li>
+</ul>
+Technologies: Ruby on Rails, MySQL, Redis, Sidekiq, Faye, Pushover.
+<ul>
+<li><p>Online auction system. Full auction workflow support (from creating to send notification about winnign beds). Dealing with admin panel, server back-end for real-time bid system. Technologies: Ruby on Rails, Redis, MySQL, Faye, MongoDB, Rescue</p></li>
+<li><p>Social Media Aggregation System. It aggregates data by keywords from Facebook, Twitter, Sysomos (15+ servises), Google News, Google Blogs, Youtube, Google Images and Vocus (Print media and Blogspot). Dealing with main aggregation gateways, alert system (sms, email), report system (pdf, plain text, html). Technologies: Ruby on Rails, MySQL, Facebook, Twitter, Klout APIs, Elasticsearch</p></li>
 </ul></li>
 </ul>
 <h2 id="education">Education</h2>
@@ -65,9 +68,8 @@ document.write('<a h'+'ref'+'="ma'+'ilto'+':'+e+'" clas'+'s="em' + 'ail">'+e+'<\
 </ul>
 <h2 id="skills">Skills</h2>
 <ul>
-<li><p>Very experienced with Ruby, JavaScript.</p></li>
-<li><p>Ruby on Rails 2-4, NodeJS, Elixir, AngularJS, RSpec, Cucumber, MongoDB, PostgreSQL</p></li>
-<li><p>Using RSpec, Cucumber and other unit tests libraries</p></li>
+<li><p>Ruby (Sinatra, Grape, Ruby on Rails 2-4), Elixir, Javascript (AngularJS, EmberJS, ReactJS), MySQL, MongoDB, PostgreSQL, Elasticsearch</p></li>
+<li><p>RSpec, Cucumber, MiniTest</p></li>
 <li><p>Using Vim / Tmux for the development</p></li>
 </ul>
 </div>
