Added gravatar icon

--- a/resume.html
+++ b/resume.html
@@ -70,7 +70,7 @@ Technologies: Ruby on Rails, MySQL, Redis, Sidekiq, Faye, Pushover.
 <ul>
 <li><p>Ruby (Sinatra, Grape, Ruby on Rails 2-4), Elixir, Javascript (AngularJS, EmberJS, ReactJS), MySQL, MongoDB, PostgreSQL, Elasticsearch</p></li>
 <li><p>RSpec, Cucumber, MiniTest</p></li>
-<li><p>Using Vim / Tmux for the development</p></li>
+<li><p>Vim / Tmux for the development</p></li>
 </ul>
 </div>
 </body>
