--- a/resume.html
+++ b/resume.html
@@ -30,47 +30,60 @@ document.write('<a h'+'ref'+'="ma'+'ilto'+':'+e+'" clas'+'s="em' + 'ail">'+e+'<\
 <li>LinkedIn: <a href="https://www.linkedin.com/pub/kirill-shaplyko/61/473/9a1/en">Kirill Shaplyko</a></li>
 <li>Twitter: <a href="http://twitter.com/_baltazore">_baltazore</a></li>
 </ul>
-<h2 id="interests">Interests</h2>
+<h2 id="overview">Overview</h2>
 <ul>
-<li>Software Development using the latest edge of the technologies like Ruby, NodeJS, Elixir and expanding my skills in DevOps like Chef, Ansible, Vagrant, Docker and in front-end like AngularJS, EmberJS, ReactJS.</li>
+<li>I am a web developer with extensive knowledge and experience using Ruby and Javascript. My most recent experience has been as a full stack web developer at mobile advertising startup.</li>
+<li>You can find some of my work on Github <a href="http://github.com/Baltazore">profile</a>. My recent technological interests and passions include the ReactJS and Flux, AngularJS/EmberJS front-end javascript framework, and experimenting with writing back-end services in Go and Elixir.</li>
 </ul>
 <h2 id="work-experience">Work Experience</h2>
 <ul>
 <li><p><strong>GameHouse</strong></p>
-<p>Software Developer, 2013 - current</p>
+<p>Software Developer, 2013 - current, Remote</p>
 <ul>
-<li>Developing the application using Ruby on Rails, NodeJS, MongoDB, Redis, AngularJS.</li>
+<li>Full stack engineer responsible for development application using Ruby on Rails, NodeJS, MongoDB, Redis, AngularJS.</li>
 <li>Working on the deployments tasks. Learning Ansible and Docker for building container based hosts.</li>
 <li>Developing the advertisement platform for the mobile devices.</li>
 <li>Brainstorm and prototype the new approach for some parts of the application.</li>
 <li>Writing specs and cucumber scenarios for integration tests for our API endpoints.</li>
 </ul></li>
 <li><p><strong>RubyRoid Labs</strong></p>
-<p>Software Developer, 2013 - 2014</p>
+<p>Software Developer, 2013 - 2014, Remote</p>
 <ul>
-<li>Document generation system. The project includes document generation, task management for Police Department, Hospitals, ect. Technologies: Ruby on Rails, PostgreSQL, AngularJS, Elasticsearch</li>
+<li>Full stack engineer responsible for development application using Ruby on Rails, PostgreSQL, Redis, AngularJS, Elasticsearch.</li>
+<li>Document generation system. The project includes document generation, task management for Police Department, Hospitals, ect.</li>
 </ul></li>
 <li><p><strong>Itransition</strong></p>
-<p>Ruby on Rails Developer, 2012-2013</p>
+<p>Ruby on Rails Developer, 2012-2013, Minsk, Belarus</p>
 <ul>
 <li>Mobile advertising platform for back-end, front-end and mobile clients API for iOS and Android. The project is intended to increase sales for businesses by providing discounts.</li>
 </ul>
-Technologies: Ruby on Rails, MySQL, Redis, Sidekiq, Faye, Pushover.
+<p>Technologies: Ruby on Rails, MySQL, Redis, Sidekiq, Faye, Pushover.</p>
 <ul>
-<li><p>Online auction system. Full auction workflow support (from creating to send notification about winnign beds). Dealing with admin panel, server back-end for real-time bid system. Technologies: Ruby on Rails, Redis, MySQL, Faye, MongoDB, Rescue</p></li>
-<li><p>Social Media Aggregation System. It aggregates data by keywords from Facebook, Twitter, Sysomos (15+ servises), Google News, Google Blogs, Youtube, Google Images and Vocus (Print media and Blogspot). Dealing with main aggregation gateways, alert system (sms, email), report system (pdf, plain text, html). Technologies: Ruby on Rails, MySQL, Facebook, Twitter, Klout APIs, Elasticsearch</p></li>
-</ul></li>
+<li>Online auction system. Full auction workflow support (from creating to send notification about winnign beds). Dealing with admin panel, server back-end for real-time bid system.</li>
+</ul>
+<p>Technologies: Ruby on Rails, Redis, MySQL, Faye, MongoDB, Rescue</p>
+<ul>
+<li>Social Media Aggregation System. It aggregates data by keywords from Facebook, Twitter, Sysomos (15+ servises), Google News, Google Blogs, Youtube, Google Images and Vocus (Print media and Blogspot). Dealing with main aggregation gateways, alert system (sms, email), report system (pdf, plain text, html).</li>
+</ul>
+<p>Technologies: Ruby on Rails, MySQL, Facebook API, Twitter API, Klout API, Elasticsearch</p></li>
 </ul>
 <h2 id="education">Education</h2>
 <ul>
 <li><p><strong>Belarussian State of Informatics and Radioelectronics</strong></p>
 <p>B.S. in Computer Science, May 2014</p></li>
 </ul>
-<h2 id="skills">Skills</h2>
+<h2 id="technology-focus">Technology Focus</h2>
 <ul>
-<li><p>Ruby (Sinatra, Grape, Ruby on Rails 2-4), Elixir, Javascript (AngularJS, EmberJS, ReactJS), MySQL, MongoDB, PostgreSQL, Elasticsearch</p></li>
-<li><p>RSpec, Cucumber, MiniTest</p></li>
-<li><p>Vim / Tmux for the development</p></li>
+<li><strong>Programming Languages:</strong> Ruby, Javascript, SQL, HTML5, CSS</li>
+<li><strong>Web Frameworks:</strong> Ruby on Rails, Sintra, Rack, Node.js</li>
+<li><strong>Frontend Web Frameworks:</strong> ReactJS and Flux, AngularJS, EmberJS, jQuery, jQuery UI, Twitter Bootstrap(2,3), Zurb Foundation(3, 4, 5)</li>
+<li><strong>DevOps:</strong> AWS (EC2, S3, Route53), Heroku, Chef, Ansible, Capistrano</li>
+<li><strong>Operating Systems:</strong> Linux (Ubuntu, Fedora, and CoreOS), Mac OS X, Windows</li>
+<li><strong>Programming Editors/IDEs:</strong> vim, emacs, tmux, JetBrains RubyMine</li>
+<li><strong>Source Code Control:</strong> Git, Mercurial, Subversion</li>
+<li><strong>Databases:</strong> PostgreSQL 8/9, MySQL 4/5, MongoDB, Redis, Elasticsearch</li>
+<li><strong>Content Management Systems/E-commerce:a</strong> Spree, RefineryCMS</li>
+<li><strong>Other technologies:</strong> AMQP (RabbitMQ), Resque, Sidekiq</li>
 </ul>
 </div>
 </body>
