--- a/resume.html
+++ b/resume.html
@@ -25,14 +25,14 @@ document.write('<a h'+'ref'+'="ma'+'ilto'+':'+e+'" clas'+'s="em' + 'ail">'+e+'<\
 // -->
 </script><noscript>&#x6b;&#46;&#x73;&#104;&#x61;&#112;&#108;&#x79;&#x6b;&#x6f;&#32;&#x61;&#116;&#32;&#x67;&#x6d;&#x61;&#x69;&#108;&#32;&#100;&#x6f;&#116;&#32;&#x63;&#x6f;&#x6d;</noscript></li>
 <li>Skype: <a href="skype:k.shaplyko">k.shaplyko</a></li>
-<li>Phone: +66 61 576 13 50, +375 336 37 60 90</li>
+<li>Phone: +375 336 37 60 90</li>
 <li>Github: <a href="https://github.com/baltazore">Baltazore</a></li>
 <li>LinkedIn: <a href="https://www.linkedin.com/pub/kirill-shaplyko/61/473/9a1/en">Kirill Shaplyko</a></li>
 <li>Twitter: <a href="http://twitter.com/_baltazore">_baltazore</a></li>
 </ul>
 <h2 id="overview">Overview</h2>
 <ul>
-<li>I am a web developer with extensive knowledge and experience using Ruby and Javascript. My most recent experience has been as a full stack web developer at mobile advertising startup.</li>
+<li>I am a web developer with extensive knowledge and experience in Ruby and JavaScript. My most recent experience has been as a full stack web developer at mobile advertising startup.</li>
 <li>You can find some of my work on Github <a href="http://github.com/Baltazore">profile</a>. My recent technological interests and passions include the ReactJS and Flux, AngularJS/EmberJS front-end javascript framework, and experimenting with writing back-end services in Go and Elixir.</li>
 </ul>
 <h2 id="work-experience">Work Experience</h2>
