Updated linkedin link

--- a/resume.html
+++ b/resume.html
@@ -27,7 +27,7 @@ document.write('<a h'+'ref'+'="ma'+'ilto'+':'+e+'" clas'+'s="em' + 'ail">'+e+'<\
 <li>Skype: <a href="skype:k.shaplyko">k.shaplyko</a></li>
 <li>Phone: +375 336 37 60 90</li>
 <li>Github: <a href="https://github.com/baltazore">Baltazore</a></li>
-<li>LinkedIn: <a href="https://www.linkedin.com/pub/kirill-shaplyko/61/473/9a1/en">Kirill Shaplyko</a></li>
+<li>LinkedIn: <a href="https://www.linkedin.com/in/kirillshaplyko">Kirill Shaplyko</a></li>
 <li>Twitter: <a href="http://twitter.com/_baltazore">_baltazore</a></li>
 </ul>
 <h2 id="overview">Overview</h2>
