--- a/resume.html
+++ b/resume.html
@@ -74,15 +74,14 @@ document.write('<a h'+'ref'+'="ma'+'ilto'+':'+e+'" clas'+'s="em' + 'ail">'+e+'<\
 </ul>
 <h2 id="technology-focus">Technology Focus</h2>
 <ul>
-<li><strong>Programming Languages:</strong> Ruby, Javascript, Elixir</li>
-<li><strong>Web Frameworks:</strong> Ruby on Rails, Sintra, Rack, Node.js</li>
-<li><strong>Frontend Web Frameworks:</strong> ReactJS and Flux, AngularJS, EmberJS, jQuery UI, Twitter Bootstrap(2,3), Zurb Foundation(3, 4, 5)</li>
+<li><strong>Programming Languages:</strong> Ruby, JavaScript, Elixir</li>
+<li><strong>Web Frameworks:</strong> Ruby on Rails, Sintra, Node.js, Phoenix</li>
+<li><strong>Frontend Web Frameworks:</strong> AngularJS, EmberJS</li>
 <li><strong>DevOps:</strong> AWS (EC2, S3, Route53), Heroku, Chef, Ansible, Capistrano</li>
-<li><strong>Operating Systems:</strong> Linux (Ubuntu, Fedora, and CoreOS), Mac OS X, Windows</li>
-<li><strong>Programming Editors/IDEs:</strong> vim, emacs, tmux, JetBrains RubyMine</li>
+<li><strong>Operating Systems:</strong> Linux (Ubuntu, CoreOS), Mac OS X</li>
+<li><strong>Programming Editors/IDEs:</strong> vim, emacs, tmux</li>
 <li><strong>Source Code Control:</strong> Git, Mercurial, Subversion</li>
 <li><strong>Databases:</strong> PostgreSQL 8/9, MySQL 4/5, MongoDB, Redis, Elasticsearch</li>
-<li><strong>Content Management Systems/E-commerce:a</strong> Spree, RefineryCMS</li>
 <li><strong>Other technologies:</strong> AMQP (RabbitMQ), Resque, Sidekiq</li>
 </ul>
 </div>
