--- a/resume.html
+++ b/resume.html
@@ -74,9 +74,9 @@ document.write('<a h'+'ref'+'="ma'+'ilto'+':'+e+'" clas'+'s="em' + 'ail">'+e+'<\
 </ul>
 <h2 id="technology-focus">Technology Focus</h2>
 <ul>
-<li><strong>Programming Languages:</strong> Ruby, JavaScript, Elixir</li>
-<li><strong>Web Frameworks:</strong> Ruby on Rails, Sintra, Node.js, Phoenix</li>
-<li><strong>Frontend Web Frameworks:</strong> AngularJS, EmberJS</li>
+<li><strong>Programming Languages:</strong> <em>Ruby</em>, JavaScript, Elixir</li>
+<li><strong>Web Frameworks:</strong> <em>Ruby on Rails</em>, Sintra, Node.js, Phoenix</li>
+<li><strong>Frontend Web Frameworks:</strong> AngularJS, <em>EmberJS</em></li>
 <li><strong>DevOps:</strong> AWS (EC2, S3, Route53), Heroku, Chef, Ansible, Capistrano</li>
 <li><strong>Operating Systems:</strong> Linux (Ubuntu, CoreOS), Mac OS X</li>
 <li><strong>Programming Editors/IDEs:</strong> vim, emacs, tmux</li>
