--- a/resume.html
+++ b/resume.html
@@ -12,10 +12,10 @@
 <div id='container'>
 <div id="contact">
 <p>
-Contact
+Software Developer
 </p>
 <p>
---------
+------------------
 </p>
 </div>
 <div>
@@ -28,7 +28,6 @@ document.write('<a h'+'ref'+'="ma'+'ilto'+':'+e+'" clas'+'s="em' + 'ail">'+e+'<\
 // -->
 </script><noscript>&#x6b;&#46;&#x73;&#104;&#x61;&#112;&#108;&#x79;&#x6b;&#x6f;&#32;&#x61;&#116;&#32;&#x67;&#x6d;&#x61;&#x69;&#108;&#32;&#100;&#x6f;&#116;&#32;&#x63;&#x6f;&#x6d;</noscript></li>
 <li>Skype: <a href="skype:k.shaplyko">k.shaplyko</a></li>
-<li>Phone: +375 336 37 60 90</li>
 <li>Github: <a href="https://github.com/baltazore">Baltazore</a></li>
 <li>LinkedIn: <a href="https://www.linkedin.com/in/kirillshaplyko">Kirill Shaplyko</a></li>
 <li>Twitter: <a href="http://twitter.com/_baltazore">_baltazore</a></li>
@@ -36,12 +35,12 @@ document.write('<a h'+'ref'+'="ma'+'ilto'+':'+e+'" clas'+'s="em' + 'ail">'+e+'<\
 </ul>
 <h2>Overview</h2>
 <ul>
-<li>I am a web developer with extensive knowledge and experience in Ruby and JavaScript. My most recent experience has been as a full stack web developer at mobile advertising startup.</li>
-<li>You can find some of my work on Github <a href="http://github.com/Baltazore">profile</a>. My recent technological interests and passions include the EmberJS, AngularJS, and ReactJS front-end frameworks, and experimenting with writing back-end services in Elixir.</li>
+<li>I am a web developer with extensive knowledge and experience in Ruby and JavaScript. My most recent experience has been as a Ember.js front-end developer at Mercedes-Benz USA.</li>
+<li>You can find some of my work on Github <a href="http://github.com/Baltazore">profile</a>. My recent technological interests and passions include the Ember.js, React.js, and Vue.js front-end frameworks, and experimenting with writing back-end services in Elixir.</li>
 </ul>
 <h2>Work Experience</h2>
 <ul>
-<li><p><strong>Consulting</strong></p>
+<li><p><strong>Freelance and Consulting</strong></p>
 <p>Software Developer 06.2015 - current, Remote</p>
 <ul>
 <li>Refactoring and optimizing large legacy codebases.</li>
@@ -50,20 +49,28 @@ document.write('<a h'+'ref'+'="ma'+'ilto'+':'+e+'" clas'+'s="em' + 'ail">'+e+'<\
 <li>Teaching and mentoring.</li>
 <li>Working on the deployments tasks.</li>
 </ul>
-<p>Technologies: Ruby on Rails, PostgreSQL, AWS, Heroku, EmberJS, AngularJS.</p></li>
-<li><p><strong>GameHouse</strong></p>
-<p>Software Developer, 10.2013 - 05.2015, Remote</p>
+<p>Technologies: Ruby on Rails, PostgreSQL, AWS, Heroku, Ember.js</p></li>
+<li><p><strong>Mercedes-Benz USA</strong></p>
+<p>Ember.js Developer, 08.2015 - 05.2017, Remote</p>
 <ul>
-<li>Full stack engineer responsible for development application using Ruby on Rails, NodeJS, MongoDB, Redis, AngularJS.</li>
+<li>Front-end engineer responsible for development application using Ember.js.</li>
+<li>Working on the adapting legacy APIs and new JSONAPI services in single application.</li>
+<li>Developing the dealer portal for the Sales team.</li>
+<li>Writing full automated test suite.</li>
+</ul></li>
+<li><p><strong>GameHouse</strong></p>
+<p>Software Developer, 11.2013 - 05.2015, Remote</p>
+<ul>
+<li>Full stack engineer responsible for development application using Ruby on Rails, NodeJS, MongoDB, Redis, Angular.js.</li>
 <li>Working on the deployments tasks. Learning Ansible and Docker for building container based hosts.</li>
 <li>Developing the advertisement platform for the mobile devices.</li>
 <li>Brainstorm and prototype the new approach for some parts of the application.</li>
 <li>Writing specs and cucumber scenarios for integration tests for our API endpoints.</li>
 </ul></li>
 <li><p><strong>RubyRoid Labs</strong></p>
-<p>Software Developer, 09.2013 - 12.2014, Remote</p>
+<p>Software Developer, 09.2013 - 01.2015, Remote</p>
 <ul>
-<li>Full stack engineer responsible for development application using Ruby on Rails, PostgreSQL, Redis, AngularJS, Elasticsearch.</li>
+<li>Full stack engineer responsible for development application using Ruby on Rails, PostgreSQL, Redis, Angular.js, Elasticsearch.</li>
 <li>Document generation system. The project includes document generation, task management for Police Department, Hospitals, ect.</li>
 </ul></li>
 <li><p><strong>Itransition</strong></p>
@@ -88,12 +95,12 @@ document.write('<a h'+'ref'+'="ma'+'ilto'+':'+e+'" clas'+'s="em' + 'ail">'+e+'<\
 </ul>
 <h2>Technology Focus</h2>
 <ul>
-<li><strong>Programming Languages:</strong> <em>Ruby</em>, JavaScript, Elixir</li>
+<li><strong>Programming Languages:</strong> <em>Ruby</em>, <em>JavaScript</em>, Elixir</li>
 <li><strong>Web Frameworks:</strong> <em>Ruby on Rails</em>, Sintra, Node.js, Phoenix</li>
-<li><strong>Frontend Web Frameworks:</strong> AngularJS, <em>EmberJS</em></li>
-<li><strong>DevOps:</strong> AWS (EC2, S3, Route53), Heroku, Chef, Ansible, <em>Capistrano</em></li>
+<li><strong>Frontend Web Frameworks:</strong> <em>Ember.js</em>, Angular.js</li>
+<li><strong>DevOps:</strong> AWS (EC2, S3, Route53), Heroku, Chef, Ansible, <em>Capistrano</em>, Docker</li>
 <li><strong>Operating Systems:</strong> Linux (Ubuntu, CoreOS), <em>Mac OS X</em></li>
-<li><strong>Programming Editors/IDEs:</strong> vim, emacs, tmux</li>
+<li><strong>Programming Editors/IDEs:</strong> vim, emacs, tmux, VS Code</li>
 <li><strong>Source Code Control:</strong> <em>Git</em>, Mercurial, Subversion</li>
 <li><strong>Databases:</strong> <em>PostgreSQL 8/9</em>, MySQL 4/5, MongoDB, Redis, Elasticsearch</li>
 <li><strong>Other technologies:</strong> AMQP (RabbitMQ), Resque, Sidekiq</li>
